# metamorphosis-app

./: .eslintrc.json  .gitignore  next.config.js  next.config.ts  package-lock.json  package.json  setup-tauri-integration.js  tailwind.config.js
public/: loading.html
resources/tags/: tag_combinations.json
resources/workflows/: Metamorphosis Workflow.json  face_workflow_template.json  fullbody_workflow_facedetailer.json  fullbody_workflow_template.json
scripts/: kill-dev-server.js  start-dev-server.js
src-tauri/: Cargo.toml  build.rs  log4rs.yaml  tauri.conf.json
src-tauri/build_logic/: archive_utils.rs  comfyui_installer.rs  mod.rs  paths.rs  python_installer.rs  vendor_copier.rs
src-tauri/capabilities/: default.json
src-tauri/scripts/: script_check_Pillow.py  script_check_insightface.py  script_check_numpy.py  script_check_onnx.py  script_check_requests.py  script_check_torch.py  script_check_torchvision.py
src-tauri/src/: comfyui_sidecar.rs  dependency_management.rs  dev_server_manager.rs  gpu_detection.rs  lib.rs  process_manager.rs  setup.rs
src-tauri/src/character/: character_creation_types.rs  character_generator.rs  mod.rs
src-tauri/src/setup_manager/: custom_node_management.rs  event_utils.rs  mod.rs  model_config.rs  model_downloader.rs  model_events.rs  model_management.rs  model_orchestrator.rs  model_utils.rs  orchestration.rs  python_utils.rs  types.rs  verification.rs
src-tauri/src/setup_manager/custom_node_manager/: cloning.rs  installation.rs  mod.rs  node_definitions.rs
src-tauri/src/setup_manager/dependency_manager/: command_runner.rs  disk_utils.rs  mod.rs  python_env.rs
src-tauri/src/sidecar_manager/: event_utils.rs  health_checker.rs  mod.rs  orchestration.rs  process_handler.rs
(+82 files in other folders)
