[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }
reqwest = { version = "0.12", features = ["blocking"] } # For downloading
tar = "0.4" # For extracting .tar.gz archives
flate2 = "1.0" # For gzip decompression used by tar
fs_extra = "1.3" # For directory operations like copying
zstd = "0.13" # For .zst decompression
dircpy = "0.3" # For recursive directory copying
zip = { version = "1.0", features = ["deflate", "bzip2"] } # For extracting .zip archives at build time

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] } # Removed process feature and explicit empty features
tauri-plugin-http = "2.0.0-rc" # Add the HTTP plugin
tauri-plugin-fs = "2.0.0-rc" # Add the FS plugin
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1", features = ["full"] } # For async runtime and process management
once_cell = "1.19" # For lazy static initialization
tauri-plugin-shell = "2.2.1"
uuid = { version = "1.8.0", features = ["v4"] }
scopeguard = "1.2.0"
fs2 = "0.4.0"
tauri-plugin-opener = "2.2.6"
chrono = "0.4" # Added for better timestamp handling
futures-util = "0.3" # For stream utilities
zip = "2.1" # For extracting .zip archives at runtime
